--- a/index.html
+++ b/index.html
@@ -8,12 +8,57 @@
   <meta name="description"
     content="Le fictif «Code Murderer» s'est échappé de Azkaban, The Daily Prophet retrace l'affaire du célèbre criminel qui avait fait tant de bruit en septembre 2022.">
   <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/global.css">
+  <link rel="stylesheet" href="./css/header.css">
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/footer.css">
 </head>
 
 <body>
 
   <header>
+    <img src="./img/logo.png" alt="Le nom du journal The Daily Prophet">
+    <section class="header-informations flex padding-y">
 
+      <div class="header-informations-wanted">
+        <div class="header-informations-wanted-wrapper flex items-center">
+          <p class="wanted-prime">10,000</p>
+          <p class="wanted-currency">EUROS</p>
+          <p class="wanted-desc">ON MAX'S<br />HEAD</p>
+        </div>
+      </div>
+
+      <div class="header-informations-container flex justify-between">
+        <div class="header-informations-weather">
+          <p class="header-informations-title">Météo Nationale</p>
+          <div class="header-informations-weather-info">
+            <p>nord</p>
+            <p>- grands orages</p>
+          </div>
+          <div class="header-informations-weather-info">
+            <p>est</p>
+            <p>- pluie battante</p>
+          </div>
+          <div class="header-informations-weather-info">
+            <p>sud</p>
+            <p>- soleil écrasant</p>
+          </div>
+          <div class="header-informations-weather-info">
+            <p>ouest</p>
+            <p>- apocalypse</p>
+          </div>
+        </div>
+
+        <div class="header-informations-zodiaq">
+          <p class="header-informations-title">Zodiaque & Aspects</p>
+          <p class="header-informations-zodiaq-info">♈ Vous risquez de mourir demain</p>
+          <p class="header-informations-zodiaq-info">♊ La chance frappe à votre porte</p>
+          <p class="header-informations-zodiaq-info">♍ Un de vos amis va vous trahir</p>
+          <p class="header-informations-zodiaq-info">♒ Un grande nouvelle s'annonce</p>
+        </div>
+      </div>
+
+    </section>
   </header>
 
   <main>
