--- a/index.html
+++ b/index.html
@@ -54,14 +54,43 @@
           <p class="header-informations-zodiaq-info">♈ Vous risquez de mourir demain</p>
           <p class="header-informations-zodiaq-info">♊ La chance frappe à votre porte</p>
           <p class="header-informations-zodiaq-info">♍ Un de vos amis va vous trahir</p>
-          <p class="header-informations-zodiaq-info">♒ Un grande nouvelle s'annonce</p>
+          <p class="header-informations-zodiaq-info">♒ Une grande nouvelle s'annonce</p>
         </div>
       </div>
 
     </section>
   </header>
 
-  <main>
+  <main class="main">
+    <h1 class="main-title">THE CODE MURDERER</h1>
+
+    <section class="article-introduction">
+      <p class="article-first-text text-medium">
+        Le célèbre criminel «Code Murderer», s'est échappé hier soir de sa prison à Azkaban. L'homme qui avait choqué le
+        monde entier et qui s'était attiré les foudres de l'opinion publique lors de la découverte de sa toute première
+        codebase le 25 septembre de l'année 2022, s'est échappé d'Azkaban selon une source de la police.
+      </p>
+      <p class="article-second-text text-medium">
+        Âgé de 23 ans, et 21 lors des faits, la brigade SOLID avait découvert plusieurs manquements graves au respect
+        des règles et des conventions de code lors de l'un de leurs contrôles inopinés. L'homme avait par la suite
+        plaidé coupable et avait été condamné par le juge Rubber à la prison à perpétuité sans possibilité de remise de
+        peine.
+      </p>
+      <div class="article-gif-container">
+        <!-- <img class="article-gif" src="./img/crazy.gif" alt="Maxence le prisonnier fou"> -->
+      </div>
+      <div class="article-call-to-action">
+        <div class="separator"></div>
+        <div class="flex flex-wrap">
+          <h2>MAXENCE DOIT-IL<br /> ÊTRE PARDONNÉ ?</h2>
+          <div class="call-to-action-buttons">
+            <button class="cta-button">Oui</button>
+            <button class="cta-button">Non</button>
+          </div>
+        </div>
+        <div class="separator"></div>
+      </div>
+    </section>
 
   </main>
 
