--- a/index.html
+++ b/index.html
@@ -92,10 +92,103 @@
       </div>
     </section>
 
+    <section class="article-bottom">
+      <article class="article-1">
+        <h2 class="article-1-title">LES MILLES ET UNES LIGNES</h2>
+        <img class="article-1-img" src="./img/police.png" alt="Un policier">
+        <p class="text-medium">Lors de son enquête, la brigade S.O.L.I.D. mit la main sur un fichier CSS d'exactement
+          mille et une lignes.
+          Ce nombre vertigineux avait, à l'époque, provoqué une vague d'arrêts de travail au sein de la brigade, due à
+          des troubles de stress post-traumatique.</p>
+      </article>
+
+      <article class="article-2">
+        <div class="separator"></div>
+        <img class="article-2-img" src="./img/dumbledore.png" alt="Dumbledore">
+        <p class="text-medium article-2-text">
+          Dumbledore, qui a été questionné sur ce sujet épineux, s'est dit favorable à la libération de Maxence,
+          indiquant que « chacun a le droit à une seconde chance », tout en précisant que « Maxence doit promettre de ne
+          plus jamais insérer plusieurs balises &lt;h1&gt; au sein d'un même document. »
+        </p>
+        <div class="separator article-2-mid-separator"></div>
+        <h2>ET MAINTENANT ?</h2>
+        <p class="text-medium article-2-text">
+          Pour l'heure, Maxence est toujours en fuite, et même si certains sont favorables à sa graciation devant la
+          justice, le ministère de la Programmation Magique vous recommande de rester chez vous, de ne pas laisser vos
+          juniors se promener seuls dans la rue, et de prévenir la police à la moindre information le concernant.
+        </p>
+      </article>
+
+      <article class="article-3">
+        <div class="separator"></div>
+        <div class="flex">
+          <h2 class="article-3-title">CONTACTEZ-NOUS</h2>
+          <div class="form-container">
+            <p class="text-medium">
+              Si vous avez des informations concernant ce suspect envoyez nous un message à l'aide de cette lettre
+              magique.
+            </p>
+            <form class="contact-form" action="#">
+              <label class="text-medium" for="email">Votre adresse mail (magique) :</label>
+              <input class="contact-input" type="email" name="email" id="email">
+              <label class="text-medium" for="message">Message :</label>
+              <textarea class="contact-input text-input" type="text" name="message" id="message"></textarea>
+              <input class="contact-submit" type="submit" value="Envoyer">
+            </form>
+          </div>
+        </div>
+      </article>
+      <article class="article-4">
+        <div class="flex">
+          <p class="article-4-title">En savoir plus</p>
+          <div class="separator"></div>
+        </div>
+        <p class="text-medium">
+          Ce page vous a bien plus et vous aimeriez voir d'autres projets original ? Cliquez sur le bouton ci-dessous !
+        </p>
+        <button class="contact-submit article-4-button">
+          <a href="https://portfolio-2-0-opal.vercel.app/fr#projects">
+            Voir plus de projets
+          </a>
+        </button>
+        <p class="text-medium">
+          Si vous souhaitez en apprendre davantage sur moi pensez à aller jeter un oeil à mon CV.
+        </p>
+        <button class="contact-submit article-4-button">
+          <a href="/cv_maxence.pdf" download>
+            Télécharger le CV
+          </a>
+        </button>
+      </article>
+    </section>
+
   </main>
 
   <footer>
-
+    <div class="footer-tech">
+      <img src="./img/logos/figma.png" alt="Logo de Figma">
+      <p class="text-medium">FIGMA</p>
+    </div>
+    <div class="footer-tech">
+      <img src="./img/logos/react.png" alt="Logo de React">
+      <p class="text-medium">REACT</p>
+    </div>
+    <div class="footer-tech">
+      <img src="./img/logos/typescript.png" alt="Logo de Typescript">
+      <p class="text-medium">TYPESCRIPT</p>
+    </div>
+    <div class="footer-tech">
+      <img src="./img/logos/tailwind.png" alt="Logo de Tailwind">
+      <p class="text-medium">TAILWIND</p>
+    </div>
+    <div class="footer-tech">
+      <img src="./img/logos/nodejs.png" alt="Logo de NodeJS">
+      <p class="text-medium">NODE JS</p>
+    </div>
+    <div class="footer-tech">
+      <img src="./img/logos/mysql.png" alt="Logo de MySQL">
+      <p class="text-medium">MySQL</p>
+    </div>
   </footer>
 
 </body>
