--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               Si vous avez des informations concernant ce suspect envoyez nous un message à l'aide de cette lettre
               magique.
             </p>
-            <form class="contact-form" action="#">
+            <form class="contact-form" action="https://formspree.io/f/meojyeyo" method="POST">
               <label class="text-medium" for="email">Votre adresse mail (magique) :</label>
               <input class="contact-input" type="email" name="email" id="email">
               <label class="text-medium" for="message">Message :</label>
